--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere molestiae sapiente aut earum alias nihil similique mollitia porro accusantium quasi omnis, non necessitatibus repudiandae maiores dolorum deleniti explicabo. Hic, reprehenderit?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis unde aut adipisci. Voluptates molestiae suscipit dignissimos? Et molestiae natus harum aliquam placeat animi sunt. Doloremque consequuntur aperiam esse hic dignissimos?</p>
         </article>
     </main>
 </body>
