--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere molestiae sapiente aut earum alias nihil similique mollitia porro accusantium quasi omnis, non necessitatibus repudiandae maiores dolorum deleniti explicabo. Hic, reprehenderit?</p>
+            <p><a href="curso-html.html">Acesso o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis unde aut adipisci. Voluptates molestiae suscipit dignissimos? Et molestiae natus harum aliquam placeat animi sunt. Doloremque consequuntur aperiam esse hic dignissimos?</p>
+            <p><a href="curso-js.html">Acesse o Curso de JavaScript</a></p>
         </article>
     </main>
 </body>
